--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,8 @@
 /SG/
+/BG.jpg
+/Snake_Score.jpg
+/Snake_body.jpg
+/Snake_head_down.jpg
+/Snake_head_left.jpg
+/Snake_head_right.jpg
+/Snake_head_up.jpg
